--- a/app/src/main/res/drawable/ic_navigate_before.xml
+++ b/app/src/main/res/drawable/ic_navigate_before.xml
@@ -1,5 +1,17 @@
-<vector android:height="24dp" android:tint="#F8FF13"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="48dp"
+        android:height="48dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24" >
+    <group android:name="rotationGroup">
+        <path
+                android:name="check_mark"
+                android:fillColor="#000000"
+                android:pathData="M12,12  m-10,0 a10,10 0,1 1,20 0 a10,10 0,1 1,-20 0" />
+        <path
+            android:fillColor="#F8FF13"
+            android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z"/>
+
+    </group>
 </vector>
+
