--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="size_big_text">16sp</dimen>
     <dimen name="size_text">14sp</dimen>
+    <dimen name="size_small_text">10sp</dimen>
 </resources>
