--- a/app/src/main/res/drawable/ic_eraser.xml
+++ b/app/src/main/res/drawable/ic_eraser.xml
@@ -1,40 +1,27 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="48dp"
-        android:height="48dp"
+        android:width="24dp"
+        android:height="24dp"
         android:viewportWidth="24"
         android:viewportHeight="24" >
-    <group android:translateX="0" android:translateY="0">
-        <group>
-            <path
-                    android:name="check_mark"
-                    android:fillColor="#000000"
-                    android:pathData="M12,12  m-12,-0 a10,10 0,1 1,24 0 a10,10 0,1 1,-24 0" />
-
-            <clip-path android:pathData="M12,12  m-12,0 a10,10 0,1 1,24 0 a10,10 0,1 1,-24 0"/>
-            <path
-                    android:pathData="M19.8858,4.1143C19.7747,3.8782 19.6096,3.689 19.3909,3.5468C19.1721,3.4045 18.9306,3.3333 18.6668,3.3333H10.6667C10.2639,3.3333 9.9306,3.4859 9.6667,3.7915L0.3331,14.4586C0.1595,14.653 0.0536,14.8804 0.0154,15.1408C-0.0229,15.4013 0.0102,15.6495 0.1144,15.8857C0.2254,16.1217 0.3903,16.3109 0.6091,16.4532C0.828,16.5954 1.0693,16.6668 1.3332,16.6668H9.3334C9.7363,16.6668 10.0696,16.5143 10.3335,16.2085L19.667,5.5414C19.8404,5.3469 19.9463,5.1196 19.9844,4.8591C20.023,4.5986 19.9898,4.3505 19.8858,4.1143ZM9.3335,15.3333H1.3332L4.8333,11.3333H12.8336L9.3335,15.3333Z"
-                    android:fillColor="#ffffff"/>
-        </group>
-    </group>
+    <path
+            android:pathData="M19.8858,4.1143C19.7747,3.8782 19.6096,3.689 19.3909,3.5468C19.1721,3.4045 18.9306,3.3333 18.6668,3.3333H10.6667C10.2639,3.3333 9.9306,3.4859 9.6667,3.7915L0.3331,14.4586C0.1595,14.653 0.0536,14.8804 0.0154,15.1408C-0.0229,15.4013 0.0102,15.6495 0.1144,15.8857C0.2254,16.1217 0.3903,16.3109 0.6091,16.4532C0.828,16.5954 1.0693,16.6668 1.3332,16.6668H9.3334C9.7363,16.6668 10.0696,16.5143 10.3335,16.2085L19.667,5.5414C19.8404,5.3469 19.9463,5.1196 19.9844,4.8591C20.023,4.5986 19.9898,4.3505 19.8858,4.1143ZM9.3335,15.3333H1.3332L4.8333,11.3333H12.8336L9.3335,15.3333Z"
+            android:fillColor="#ffffff"/>
 </vector>
-<!--<vector-->
+<!--<vector xmlns:android="http://schemas.android.com/apk/res/android"-->
         <!--android:width="48dp"-->
         <!--android:height="48dp"-->
         <!--android:viewportWidth="24"-->
-        <!--android:viewportHeight="24"-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
-    <!--<group android:name="rotationGroup">-->
-        <!--&lt;!&ndash;<path&ndash;&gt;-->
-                <!--&lt;!&ndash;android:name="check_mark"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:fillColor="#000000"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:pathData="M12,12  m-10,0 a10,10 0,1 1,20 0 a10,10 0,1 1,-20 0" />&ndash;&gt;-->
-        <!--<clip-path android:pathData="M0,0h20v20h-24z M 0,0"/>-->
-        <!--<path-->
-            <!--android:name="check_mark"-->
-            <!--android:fillColor="#000000"-->
-            <!--android:pathData="M19.8858,4.1143C19.7747,3.8782 19.6096,3.689 19.3909,3.5468C19.1721,3.4045 18.9306,3.3333 18.6668,3.3333H10.6667C10.2639,3.3333 9.9306,3.4859 9.6667,3.7915L0.3331,14.4586C0.1595,14.653 0.0536,14.8804 0.0154,15.1408C-0.0229,15.4013 0.0102,15.6495 0.1144,15.8857C0.2254,16.1217 0.3903,16.3109 0.6091,16.4532C0.828,16.5954 1.0693,16.6668 1.3332,16.6668H9.3334C9.7363,16.6668 10.0696,16.5143 10.3335,16.2085L19.667,5.5414C19.8404,5.3469 19.9463,5.1196 19.9844,4.8591C20.023,4.5986 19.9898,4.3505 19.8858,4.1143ZM9.3335,15.3333H1.3332L4.8333,11.3333H12.8336L9.3335,15.3333Z"/>-->
+        <!--android:viewportHeight="24" >-->
+    <!--<group android:translateX="0" android:translateY="0">-->
+        <!--<group>-->
+            <!--<path-->
+                    <!--android:fillColor="#000000"-->
+                    <!--android:pathData="M12,12  m-12,-0 a10,10 0,1 1,24 0 a10,10 0,1 1,-24 0" />-->
 
-        <!--&lt;!&ndash;android:pathData="M9.9,13  m-10,0 a13,13 0,1 1,26 0 a13,13 0,1 1,-26 0" />&ndash;&gt;-->
-
-            <!--</group>-->
+            <!--<clip-path android:pathData="M12,12  m-12,0 a10,10 0,1 1,24 0 a10,10 0,1 1,-24 0"/>-->
+            <!--<path-->
+                    <!--android:pathData="M19.8858,4.1143C19.7747,3.8782 19.6096,3.689 19.3909,3.5468C19.1721,3.4045 18.9306,3.3333 18.6668,3.3333H10.6667C10.2639,3.3333 9.9306,3.4859 9.6667,3.7915L0.3331,14.4586C0.1595,14.653 0.0536,14.8804 0.0154,15.1408C-0.0229,15.4013 0.0102,15.6495 0.1144,15.8857C0.2254,16.1217 0.3903,16.3109 0.6091,16.4532C0.828,16.5954 1.0693,16.6668 1.3332,16.6668H9.3334C9.7363,16.6668 10.0696,16.5143 10.3335,16.2085L19.667,5.5414C19.8404,5.3469 19.9463,5.1196 19.9844,4.8591C20.023,4.5986 19.9898,4.3505 19.8858,4.1143ZM9.3335,15.3333H1.3332L4.8333,11.3333H12.8336L9.3335,15.3333Z"-->
+                    <!--android:fillColor="#ffffff"/>-->
+        <!--</group>-->
+    <!--</group>-->
 <!--</vector>-->
