--- a/app/src/main/res/layout/alert_dialog_with_image.xml
+++ b/app/src/main/res/layout/alert_dialog_with_image.xml
@@ -6,7 +6,6 @@
     <ImageView
             android:id="@+id/dialog_imageview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background" />
+            android:layout_height="wrap_content" />
 
 </LinearLayout>
